--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -118,6 +118,7 @@
     /* width: 68px; */
     /* height: 76px; */
     border-color: rgba(0, 0, 0, 0);
+    z-index: -1;
 }
 
 #ring-control-left{
